objects/FieloEE__RedemptionItem__c.object
<CustomObject>
    <description>Items in a redemption order or in an open shopping cart.</description>
    <fields>
        <fullName>FieloEE__CodeRange__c</fullName>
        <label>Range of Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__Code__c</fullName>
        <label>Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__DeliveredDate__c</fullName>
        <label>Delivered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FieloEE__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloEE__ExpirationDate__c</fullName>
        <label>ExpirationDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FieloEE__ItemPoints__c</fullName>
        <description>Points involved on the item.</description>
        <label>Points</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__MemberName__c</fullName>
        <description>Formula to get the member name.</description>
        <formula>FieloEE__Redemption__r.FieloEE__Member__r.FieloEE__LastName__c +&quot;, &quot;+ FieloEE__Redemption__r.FieloEE__Member__r.FieloEE__FirstName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__NetPoints__c</fullName>
        <formula>FieloEE__RewardItem__r.FieloEE__Reward__r.FieloEE__PointsCant__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NetPoints</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__OriginalPoints__c</fullName>
        <label>Original Points</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__Redemption__c</fullName>
        <label>Redemption</label>
        <referenceTo>FieloEE__Redemption__c</referenceTo>
        <relationshipLabel>Redemption Items</relationshipLabel>
        <relationshipName>Redemption_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FieloEE__RewardItemPrice__c</fullName>
        <description>Price of the item.</description>
        <label>Reward Item Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FieloEE__RewardItem__c</fullName>
        <label>Reward Item</label>
        <referenceTo>FieloEE__RewardItem__c</referenceTo>
        <relationshipLabel>Redemption Items</relationshipLabel>
        <relationshipName>Redemption_Items</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FieloEE__RewardName__c</fullName>
        <description>Name of the reward.</description>
        <formula>FieloEE__RewardItem__r.FieloEE__Reward__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reward Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Reward__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reward</label>
        <referenceTo>FieloEE__Reward__c</referenceTo>
        <relationshipLabel>Redemption Items</relationshipLabel>
        <relationshipName>RedemptionItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__Status__c</fullName>
        <description>Item status.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Ready</fullName>
                </value>
                <value>
                    <fullName>Reverted</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloEE__StockMode__c</fullName>
        <formula>TEXT(FieloEE__Reward__r.FieloEE__VoucherCreationMode__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stock Mode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__UniqueCode__c</fullName>
        <formula>IF( ISPICKVAL(FieloEE__Reward__r.FieloEE__VoucherCreationMode__c, &apos;Controlled By Item&apos;), FieloEE__Code__c,    IF ( FieloEE__CodeRange__c &lt; 10 ,       FieloEE__Code__c + &apos;0&apos; + TEXT( FieloEE__CodeRange__c ),       FieloEE__Code__c + RIGHT( TEXT( FieloEE__CodeRange__c ), 2 )    ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__VoucherLink__c</fullName>
        <description>Formula to link the voucher.</description>
        <formula>HYPERLINK( &apos;./apex/&apos; +  $Setup.FieloEE__PublicSettings__c.FieloEE__PackagePrefix__c + &apos;RedemptionItemVoucher?voucherId=&apos; +  Id, $Label.fieloee__voucher )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Voucher Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__isInstantRedemption__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Instant Redemption</label>
        <type>Checkbox</type>
    </fields>
    <label>Redemption Item</label>
    <nameField>
        <displayFormat>OI-{000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Redemption Item</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>FieloEE__QuantityGreaterThanZero</fullName>
        <active>true</active>
        <description>The quantity must be greater than zero</description>
        <errorConditionFormula>FieloEE__Quantity__c &lt;= 0</errorConditionFormula>
        <errorMessage>The quantity must be greater than 0</errorMessage>
    </validationRules>
</CustomObject>